# rust

./: .gitignore  .gitmodules  README.md
axum_tut/: Cargo.toml  Makefile
axum_tut/src/: error.rs  main.rs
axum_tut/src/web/: routes_login.rs
axum_tut/tests/: quick_dev.rs
bacon_tut/: Cargo.toml  flake.nix
bacon_tut/examples/: my_example.rs
bacon_tut/src/: main.rs
cucumber_tut/: .gitignore  Cargo.toml  README.md  assert.md  background.md  bacon.toml  capturing.md  data-tables.md  doc-strings.md  example1.md  example2.md  flake.nix  justfile  rule.md  scenario-hooks.md  scenario-outline.md  tags.md
cucumber_tut/.config/: nextest.toml
cucumber_tut/src/: tests.rs
cucumber_tut/tests/: example.rs  example2.rs  integration.rs
cucumber_tut/tests/features/: example2.feature
cucumber_tut/tests/features/book/: animal.feature
hacking/sha1_cracker/: wordlist.txt:Zone.Identifier
hello/: Dockerfile  makefile
hello/src/: hello_world.rs  main.rs  pointers_ref.rs  print.rs  vars.rs
rust_deno_ffi/src/: lib.rs
rust_docker/: makefile
rust_docker/src/: arrays.rs  conditions.rs  main.rs  tuple.rs  vectors.rs
rust_ffi/: Cargo.toml  makefile
rust_ffi/src/: lib.rs
rust_tut/: Cargo.toml  flake.nix  justfile
rust_tut/src/: arrays_and_slices.rs  atomic_reference_counter.rs  bank.rs  channels.rs  closures.rs  collections.rs  conditions.rs  data_types.rs  debug.rs  (+40 more)
rust_tutorial/: .vadimcn.vscode-lldb  Cargo.toml  Makefile  error_handling.txt  flake.nix  justfile
sqlx_tut/: Cargo.toml  my_database.db  readme.md
toki/: Cargo.toml  beeg.csv
tokio_tut/: Cargo.toml
(+63 files in other folders)
