[package]
name = "axum_tut"
version = "0.1.0"
edition = "2021"

[alias]
itest = "test"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }


[dev-dependencies]
httpc-test = "0.1.1"
